--- a/src/pages/login-signup/login-signup.html
+++ b/src/pages/login-signup/login-signup.html
@@ -1,18 +1,54 @@
-<!--
-  Generated template for the LoginSignupPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
-<ion-header>
+<ion-header >
 
-  <ion-navbar>
-    <ion-title>login-signup</ion-title>
+  <ion-navbar hideBackButton>
+    <!-- <ion-title>login-signup</ion-title> -->
+    <ion-buttons start>
+    <button ion-buttn icon-only (click)="back()">
+    <ion-icon name="arrow-back" color="secondary"></ion-icon>
+  </button>
+    </ion-buttons>
   </ion-navbar>
 
 </ion-header>
 
 
-<ion-content padding>
 
+
+<ion-content id="login" text-center padding style="background-color: #f0f0f0">
+	<div class="login" padding >
+	<img src="assets/imgs/tmbGgs.png" style="max-width: 14%;"/>
+	<h1 style="padding-bottom:10%">ThumbGigs</h1>
+	
+	<div id="form-wrap">
+		<form [formGroup]="loginForm" (submit)="loginUser()" novalidate>
+			<ion-item>
+				<ion-label floating>Email</ion-label>
+				<ion-input #email formControlName="email" [(ngModel)]="user.email" type="email"></ion-input>
+			</ion-item>
+			<!--  [class.invalid]="!loginForm.controls.email.valid && loginForm.controls.email.dirty" (input)="clearErrors()"
+			<div class="error-message" 
+				*ngIf="!loginForm.controls.email.valid  && loginForm.controls.email.dirty && returnInvalid">
+				<p>Please enter a valid email.</p>
+			</div> -->
+
+			<ion-item>
+				<ion-label floating>Password</ion-label>
+				<ion-input #password formControlName="password" [(ngModel)]="user.password" type="password"></ion-input>
+			</ion-item>
+			<!--  [class.invalid]="!loginForm.controls.password.valid && loginForm.controls.password.dirty" (input)="clearErrors()"
+			<div class="error-message" 
+				*ngIf="!loginForm.controls.password.valid  && loginForm.controls.password.dirty && returnInvalid">
+				<p>Your password needs more than 6 characters.</p>
+			</div> -->
+
+			<button ion-button type="submit" style="margin-top: 3em">Login</button>
+		</form>
+	</div>
+	
+
+	<div>
+		<button ion-button block clear (click)="goToSignup()">or Sign up here</button>
+	</div>
+</div>
 </ion-content>
